# time-rupture-inference

./: .auditignore.json  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_PACKAGE.md  SECURITY.md  claims.yaml  invariants.yaml  provenance_manifest.json  pyproject.toml  requirements-ci.in  requirements-lock.txt  sbom.spdx.json  scripts_prereg.py
.claude/: settings.json
.github/: CODEOWNERS  pull_request_template.md  release.yml
configs/: agents.yaml  cyber_hygiene_targets.json  env.yaml  experiment.yaml  metrics.yaml  ms_sn_v1_0_0.sha256  ms_sn_v1_0_0.yaml  scalar_inexpressible_env.yaml  v7_experiment.yaml  v8_1_scalar_inexpressible_env.yaml  v8_2_trigger_scoped_env.yaml  v8_4_rederived_env.yaml  v9_neural_agent.yaml
docs/: ADVERSARIAL_PORTABILITY_REPORT.md  AERA_MAINTENANCE_CONTROL_RUNBOOK.md  ARCHITECTURE.md  ARCHITECTURE_SCORECARD.md  AUDIT_CLOSURE_LEDGER.md  AUDIT_DEBTS_2026-05-18.md  AUDIT_META_ANALYSIS_2026-05-18.md  BRANCH_HYGIENE.md  CLAIM_SOURCE_MATRIX.md  CODE_QUALITY_AUDIT.md  CONFERENCE_ABSTRACT.md  CONTRIBUTION_CLAIMS.md  CRITICAL_RND_FRAMEWORK_TIME_RUPTURE_INFERENCE.md  CRITIQUE_CLOSURE_v3.md  DEBT_LEDGER.md  DECORATION_QUARANTINE_REPORT.md  DEMO.md  DEPENDENCY_TRUST_CONTRACT.md  DESIGN_LINEAGE_BRAIN_TO_MECHANISM.md  DOC_STYLE_CONTRACT.md  EXPERIMENTAL_PROMOTION_PROTOCOL.md  EXPERIMENTAL_PROVENANCE_POLICY.md  EXTERNAL_REPRODUCTION_GUIDE.md  EXTERNAL_VALIDATION_PROTOCOL.md  FAILURE_TAXONOMY.md  FRONTIER_READINESS_REPORT.md  INDI_EXECUTIVE_SUMMARY.md  INDI_LIMITATIONS.md  INDI_README.md  INDI_REVIEWER_CHECKLIST.md  MANUAL_AUTHOR_NOTES.md  MANUAL_REVIEW_NOTES.md  MECHANISM_INVENTORY.md  NCTP_PROMOTION_READINESS.md  NCTP_RUNTIME_STATUS.md  NOISE_HYGIENE_AUDIT_2026-05-20.md  NO_AUTHOR_REQUIRED_REVIEW.md  OPENAI_STYLE_REVIEW.md  OPEN_STRUCTURAL_GAPS.md  PRIOR_ART_BOUNDARY_MAP.md  (+19 more)
evidence/: ACTION_SHA_RESOLUTION.json  BASELINE_TRUST_INSPECTION.json  CI_BASELINE_SNAPSHOT.json  CI_RUN_ATTESTATION.json  CLAIM_DOWNGRADE_LEDGER.jsonl  CONVERGENCE_v6_v7.md  DEPENDENCY_HASH_LOCK_BLOCKED.json  DOC_TRUST_AUDIT.json  EXTERNAL_VALIDATION_BUNDLE.schema.json  INTERNAL_ADVERSARIAL_REDTEAM.json  LEARNED_VS_VALIDATED_v9.md  NEGATIVE_RESULT_v1.md  NEGATIVE_RESULT_v3.md  NEGATIVE_RESULT_v5.md  NEGATIVE_RESULT_v6.md  NEGATIVE_RESULT_v7.md  NEGATIVE_RESULT_v8.md  NEGATIVE_RESULT_v8_1.md  NEGATIVE_RESULT_v8_2_PARTIAL_RED.md  NEGATIVE_RESULT_v8_3_BOUNDARY_RED.md  NEGATIVE_RESULT_v9_RED.md  POLICY_GAP_AUDIT.json  SCALAR_INEXPRESSIBILITY_DIAGNOSTIC.md  SCALAR_INEXPRESSIBILITY_DIAGNOSTIC_v8_1.md  SCALAR_INEXPRESSIBILITY_DIAGNOSTIC_v8_2.md  SCORECARD_STATUS.json  V8_PARENT_RED.md  (+20 more)
(+384 files in other folders)
