[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "time-rupture-inference"
version = "0.1.1"
description = "Falsification-first proof that a learned temporal model survives a hidden regime rupture."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "neuron7xLab" }]
keywords = ["temporal-inference", "change-point", "falsification", "online-learning"]
dependencies = ["numpy>=1.26", "matplotlib>=3.8", "pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.18", "types-PyYAML>=6.0"]

[project.urls]
Repository = "https://github.com/neuron7xLab/time-rupture-inference"

[project.scripts]
tri-gate = "ctios.runner:main"
tri-automate = "ctios.automation:main"
tri-agent = "ctios.agent_cli:main"
tri-falsify = "ctios.falsify_cli:main"
tri-architect = "ctios.architect_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
strict = true
# false: untyped third-party imports are an ERROR, not silently Any.
# src/ctios imports only numpy (ships py.typed) and yaml (covered by
# the declared types-PyYAML dev dep + mypy's built-in mapping). No
# hand-written stub / mypy_path: that would shadow the maintained
# stubs and drift. Verified `mypy --strict src/ctios` passes clean.
ignore_missing_imports = false
files = ["src/ctios"]
